esercizi javascript pt.2

--- a/JavaScript/esercizi-2025-03-13/risultati-esercizi.html
+++ b/JavaScript/esercizi-2025-03-13/risultati-esercizi.html
@@ -1,19 +1,42 @@
 <!DOCTYPE html>
-<html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Esercizio JavaScript</title>
-</head>
+<html>
 <body>
 
-    <b1>ESERCIZI JAVASCRIPT</b1>
-    <br><br><br>
+<h1>Esercizi Javascript</h1>
+<br><br>
 
+<h3>Esercizio 1</h3>
+<script src="./esercizio1.js"></script>
+<button type="button" onclick="mostraNome()">Qual è il mio nome?</button>
+<p id="esercizio1"></p>
+<br><hr><br>
 
-    <
-    <script src="./esercizio1.js"></script>
-    <h1 id="output">Premi il pulsante per vedere il tuo nome</h1>
-    <button type="button" onclick="mostraNome()">questo è il mio nome</button>
+<h3>Esercizio 2</h3>
+<script src="./esercizio2.js"></script>
+<p></p>
+<button type="button" onclick="cambiaNumero()">Cambia valore del numero!</button>
+<p id="esercizio2"></p>
+<br><hr><br>
+
+<h3>Esercizio 3</h3>
+<script src="./esercizio3.js"></script>
+<button type="button" onclick="mostraTipo()">Qual è il mio nome?</button>
+<p id="testo1"></p>
+<p id="testo2"></p>
+<p id="testo3"></p>
+<br><hr><br>
+
+<h3>Esercizio 4</h3>
+<script src="./Esercizio1_4.js"></script>
+<button type="button" onclick="mostraNome()">Qual è il mio nome?</button>
+<p id="Esercizio_4"></p>
+<br><hr><br>
+
+<h3>Esercizio 5</h3>
+<script src="./Esercizio1_5.js"></script>
+<button type="button" onclick="mostraNome()">Qual è il mio nome?</button>
+<p id="Esercizio_5"></p>
+<br><hr><br>
+
 </body>
-</html>
+</html> 
